# lyrc

./: .gitignore  .ruff.toml  .rustfmt.toml  pyproject.toml
.cargo/: config.toml
crates/config/: README.md
crates/core/: Cargo.toml
crates/core/src/: app.rs  lib.rs  renderer.rs  state.rs
crates/lyrics/: Cargo.toml
crates/lyrics/src/: lib.rs  models.rs  provider.rs  service.rs
crates/lyrics/src/providers/: lrclib.rs
crates/lyrics/tests/python/async/: lrclib_tests.rs  main.rs
crates/mpris/: Cargo.toml  README.md
crates/mpris/src/: client.rs  lib.rs  playback.rs  player.rs  proxy.rs  track.rs
crates/mpris/tests/: client_tests.rs
crates/subtitles/: Cargo.toml
crates/subtitles/src/: lib.rs  parser.rs  subtitles.rs  writer.rs
crates/subtitles/src/formats/lrc/: parser.rs
crates/synchronizer/: Cargo.toml
crates/synchronizer/src/: lib.rs  traits.rs
crates/synchronizer/src/strategies/: lyrics.rs
python/alignment/: README.md  pyproject.toml
python/alignment/src/alignment/: aligner.py
python/alignment/src/alignment/models/: AlignedLyrics.py
python/scraper/: README.md  pyproject.toml
python/scraper/src/scraper/: service.py
python/scraper/src/scraper/models/: lyrics.py  track.py
python/scraper/src/scraper/providers/: base.py  lrclib.py  registry.py
python/scraper/tests/integration/: test_lrclib_api.py
python/scraper/tests/unit/models/: test_lyrics.py  test_track.py
python/scraper/tests/unit/providers/: test_liblrc.py
scripts/: cargo-test-python.sh  setup.sh
scripts/tests/: pyo3.sh  python-integration.sh
(+1 files in other folders)
