[package]
name = "lyrics"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
futures = "0.3.33"
pyo3 = { version = "0.29.0", features = ["auto-initialize"] }
pyo3-async-runtimes = { version = "0.29.0", features = ["testing", "attributes", "tokio-runtime"] }
tokio = { version = "1.53.1", features = ["full"] }
mpris = { path = "../mpris/" }

[features]
python-tests = []

[[test]]
name = "python-async"
path = "tests/python/async/main.rs"
required-features = ["python-tests"]
harness = false
